# Conlyse

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER.md  Justfile  LICENSE  QUICK_START.md  README.md  authentification.py  conflict_interface.py  data_types.py  docker-compose.yml  example.py  exceptions.py  game_api.py  game_interface.py  parser.py  paths.py  province.py  pyproject.toml  setup.py  stack.sh  test-dev-env.sh  web_api.py
apps/Conlyse/: .gitignore  PERFORMANCE_WINDOW.md  WORLD_TEXT_RENDERER_USAGE.md  app.py  build_nuitka.py  event_handler.py  logger.py  main_window.py  page_manager.py  page_type.py  pyproject.toml
apps/Conlyse/assets/: default_keybindings.json  default_main_config.json
apps/Conlyse/conlyse/: app.py  main_window.py
apps/Conlyse/managers/: asset_manager.py  config_manager.py  event_manager.py  page_manager.py  style_manager.py
apps/Conlyse/pages/: page.py  replay_list.py  replay_list_page_test.py
apps/Conlyse/utils/: enums.py  string_manipulation.py
apps/desktop/: .gitignore  README.md  build_nuitka.py  pyproject.toml
apps/desktop/assets/: default_main_config.json
libs/conflict_interface/: .gitignore  README.md  paths.py  pyproject.toml  setup.py
libs/conflict_interface/conflict_interface/: __init__.py  logger_config.py  versions.py
libs/conflict_interface/examples/: build_upgrade.py  clienttime.py  closest_point.py  command_army.py  demolish_upgrade.py  dump_dataclass.py  game_join.py  game_join_guest.py  list_upgrades.py  print_borders.py  proxy_example.py  read_replay.py  repatch_game.py  replay_roundtrip.py  research.py  resource_profile.py  start_of_game.py
libs/conflict_interface/performance_tests/: benchmark_long_patch.py  memory_profiling.py  replay_benchmark.py  replay_patch_space_benchmark.py  test_patch_load.py
libs/conflict_interface/tests/: test_command_registry.py  test_game_interface.py  test_gameobject_conversion.py  test_hub_api.py  test_hub_interface.py  test_replay_builder.py
services/api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-test.txt
services/api/alembic/: env.py
services/api/app/: main.py
services/api/tests/: conftest.py  test_auth.py  test_downloads.py  test_health.py  test_rbac.py  test_replay_library.py
services/server_converter/: .dockerignore  .gitignore  Dockerfile  README.md  config.docker.json  config.example.json  docker-compose.yml  pyproject.toml
services/server_converter/src/: __init__.py  __main__.py  cold_storage.py  config.py  converter.py  database.py  hot_storage.py  metrics.py  redis_consumer.py  response_cache.py
tools/game_stats_extractor/: pyproject.toml
tools/gnn_extractor/: pyproject.toml
tools/ml/: pyproject.toml
tools/ml/scripts/: build_building_vocab.py  build_unit_vocab.py  check_newspaper_conventions.py
tools/recorder/: README.md  __init__.py  __main__.py  account.py  account_pool.py  config_schema.py  find_game_logic.py  multi_recorder.py  proxy.py  pyproject.toml  recorder.py  recorder_logger.py  resume.py  storage.py  telemetry.py  utils.py
tools/recording_converter/: .gitignore  README.md  __init__.py  __main__.py  converter.py  enums.py  from_game_state_using_make_bipatch_to_replay.py  from_json_responses_using_update_to_replay.py  from_recording_to_json.py  pyproject.toml  recorder_logger.py  recording_reader.py
tools/replay_debug/: README.md  __init__.py  __main__.py  args_parser.py  check_timestamps.py  cli.py  cli_old_backup.py  command_registry.py  commands.py  constants.py  enhanced_cli.py  enhanced_shell.py  formatters.py  game_object_viewer.py  navigation.py  patch_analysis.py  pyproject.toml  shell.py  state_viewer.py
tools/replay_debug/commands/: __init__.py  advanced_commands.py  check_timestamp.py  navigation_commands.py  patch_commands.py  state_commands.py
tools/server_observer/: .dockerignore  ASYNC_HTTPS_CLIENT.md  ASYNC_HTTP_TESTING.md  CMakeLists.txt  Cargo.toml  DOCKER.md  Dockerfile  METRICS.md  METRICS_EXAMPLES.md  README.md  __init__.py  __main__.py  account.py  account_pool.example.json  account_pool.py  build_docker.sh  config.example.json  config_example.json  docker-compose.ghcr.yml  docker-compose.yml  example_config_separate_dirs.json  memory_profiler.py  oberservation_api.py  observation_api.py  observation_session.py  recorder_logger.py  recording_registry.py  server_observer.py  static_map_cache.py  storage.py
tools/server_observer/include/: account.hpp  account_pool.hpp  async_https_client.hpp  async_https_request.hpp  config_file_watcher.hpp  db_client.hpp  game_finder.hpp  http_client.hpp  http_response.hpp  hub_interface_wrapper.hpp  metrics.hpp  observation_api.hpp  observation_package.hpp  observation_session.hpp  proxy_config.hpp  recording_registry.hpp  recording_storage.hpp  redis_publisher.hpp  request_manager.hpp  s3_client.hpp  scheduler.hpp  server_observer.hpp  static_map_cache.hpp
tools/server_observer/src/: account.cpp  account_pool.cpp  account_pool.rs  async_https_request.cpp  config_file_watcher.cpp  db_client.cpp  game_finder.cpp  http_client.cpp  hub_interface_wrapper.cpp  main.cpp  main.rs  metrics.cpp  observation_api.cpp  observation_package.cpp  observation_session.cpp  proxy_config.cpp  recording_registry.cpp  recording_registry.rs  recording_storage.cpp  recording_storage.rs  redis_publisher.cpp  request_manager.cpp  s3_client.cpp  s3_client.rs  scheduler.cpp  scheduler.rs  server_observer.cpp  server_observer.rs  static_map_cache.cpp
tools/server_observer/tests/: PROXY_TESTING.md  README.md  test_async_https_request.cpp
tools/server_observer_cpp/: .gitignore  CMakeLists.txt  MIGRATION.md  README.md  account_pool_example.json  config_example.json
tools/server_observer_cpp/include/: account.hpp  hub_interface_wrapper.hpp  observation_api.hpp  observation_session.hpp  recording_storage.hpp  server_observer.hpp
tools/server_observer_cpp/src/: account.cpp  account_pool.cpp  hub_interface_wrapper.cpp  main.cpp  (+4 more)
tools/server_observer_rust/: .gitignore  Cargo.toml  README.md  config.example.json
(+1307 files in other folders)
