[project]
name = "conlyse"
version = "0.1.0"
description = "Conflict of Nations replay analytics tool"
authors = [
    { name = "zDox" },
    { name = "Niknam3"}
]
readme = "README.md"
requires-python = "==3.12.*"

# Core dependencies (adjust as needed)
dependencies = [
    "PyQt6>=6.2.0",
    "numpy>=1.21.0",
]


# This tells pip that Setuptools builds the project
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"conlyse.assets" = ["*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["conlyse"]
