[project]
name = "conlyse"
version = "0.1.0"
description = "Conflict of Nations replay analytics tool"
authors = [
    { name = "zDox" },
    { name = "Niknam3"}
]
readme = "README.md"
requires-python = "==3.12.*"

# Core dependencies (adjust as needed)
# NOTE: conlyse-ml pulls in torch + torch-geometric for the win predictor. On Linux,
# `pip install torch` defaults to CUDA wheels (~2GB); install the CPU-only build first
# (see https://pytorch.org/get-started/locally/, e.g.
# `pip install torch --index-url https://download.pytorch.org/whl/cpu`) before
# installing this package.
dependencies = [
    "PySide6>=6.2.0",
    "PyOpenGL>=3.1.0",
    "numpy>=1.21.0",
    "qtawesome>=1.4.0",
    "conflict-interface",
    "conlyse-ml",
    "freetype-py>=2.3.0",
    "mapbox-earcut>=1.0.0",
    "httpx>=0.27.0",
]


[tool.setuptools.packages.find]
where = ["src"]

# This tells pip that Setuptools builds the project
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"conlyse.assets" = ["*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["conlyse"]
