[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn-extractor"
version = "0.1.0"
description = "CLI tool to extract GNN win-predictor training samples from Conflict of Nations replay files"
requires-python = ">=3.12"
dependencies = [
    "conflict-interface>=0.1.2",
    "conlyse-ml",
    "numpy",
    "torch",
    "tqdm",
]

[project.scripts]
gnn-extract = "gnn_extractor.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
