[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conflict-recorder"
version = "0.1.0"
description = "CLI tool for recording Conflict of Nations game sessions"
requires-python = ">=3.12"
dependencies = [
    "conflict-interface>=0.1.2",
]

[project.scripts]
recorder = "recorder.__main__:main"
