[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conflict-replay-debug"
version = "0.1.0"
description = "Interactive CLI tool for inspecting Conflict of Nations replay data"
requires-python = ">=3.12"
dependencies = [
    "conflict-interface>=0.1.2",
    "python-dateutil",
]

[project.scripts]
replay-debug = "replay_debug.__main__:main"
