[package]
name = "server_observer_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
minio = { version = "0.3.0", default-features = false, features = ["rustls-tls", "ring"] }
prometheus = "0.14.0"
once_cell = "1.19.0"
redis = { version = "1.0.4", features = ["tokio-comp"] }
regex = "1.12.2"
reqwest = { version = "0.13.2", features = ["json", "socks", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = "0.7.16"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zstd = "0.13.3"
pyo3 = { version = "0.27.1", features = ["auto-initialize", "abi3-py312"] }
